# Stellage_V1

./: CLAUDE.md  OBSERVATIONS.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/: .env  .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
backend/src/stellage/: main.py
backend/src/stellage/apps/: __init__.py
backend/src/stellage/apps/auth/: depends.py  handlers.py  managers.py  routes.py  schemas.py  services.py  tasks.py
backend/src/stellage/core/: celery_config.py  logging_config.py  rate_limit.py  settings.py
backend/templates/: confirmation_code.html  confirmation_email.html
backend/tests/: conftest.py  test_auth_api.py  test_auth_handler.py  test_box_api.py  test_shelf_api.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: instance.ts
frontend/src/components/Auth/: AuthCard.tsx  AuthForm.tsx  AuthInput.tsx  AuthLayout.tsx
frontend/src/components/Logo/: Logo.tsx  StellageLogo.tsx
frontend/src/components/Stellage/: BoxCard.tsx
frontend/src/pages/: Auth.css  LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/Auth/: Auth.css  LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/Main/: MainPage.css  MainPage.tsx
frontend/src/store/: useAuthStore.ts  useStellageStore.ts
frontend/src/styles/: index.css
frontend/src/types/: auth.ts
frontend/src/types/Auth/: AuthCard.ts  AuthForm.ts  AuthInput.ts  AuthLayout.ts  auth.ts
frontend/src/types/Header/: UserModal.tsx
frontend/src/types/Stellage/: boxes.ts  shelves.ts
src/stellage/: main.py
src/stellage/apps/: __init__.py
src/stellage/apps/auth/: depends.py  handler.py  handlers.py  manager.py  managers.py  named_tuple.py  routes.py  schemas.py  services.py  tasks.py  utils.py
src/stellage/core/: __init__.py  settings.py
src/stellage/core/core_dependencies/: db_dependency.py
src/stellage/database/alembic/: env.py
src/stellage/database/mixins/: timestamp_mixins.py
src/stellage/database/models/: user.py
(+57 files in other folders)
