[project]
name = "stellage"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Karpov",email = "alexanderak.0501@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standart] (>=0.128.0,<0.129.0)",
    "uvicorn[standart] (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
    "redis (>=7.1.0,<8.0.0)",
    "celery (>=5.6.1,<6.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[tool.poetry]
packages = [{include = "stellage", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
app = "stellage.main:start"